--- a/diveguide_professional_api/requirements.txt
+++ b/diveguide_professional_api/requirements.txt
@@ -5,6 +5,7 @@ Django==4.2
 djangorestframework==3.14.0
 isort==5.12.0
 mypy-extensions==1.0.0
+mysqlclient==2.1.1
 packaging==23.1
 pathspec==0.11.1
 platformdirs==3.2.0
