--- a/diveguide_professional_api/config/nginx.conf
+++ b/diveguide_professional_api/config/nginx.conf
@@ -9,7 +9,7 @@ http {
   keepalive_timeout 65;
 
   server {
-    listen 6600;
+    listen 80;
     server_name localhost;
 
     location / {
@@ -17,6 +17,12 @@ http {
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /health {
+       access_log off;
+       add_header 'Content-Type' 'application/json';
+       return 200 '{"status":"Healthy"}';
     }
 
     location /static/ {
