--- a/diveguide_professional_api/config/nginx/nginx.conf
+++ b/diveguide_professional_api/config/nginx/nginx.conf
@@ -2,7 +2,7 @@ server {
    listen 80;
    server_name nginxproxyserver;
 
-   location / {
+   location ~ ^/(api|util|admin) {
      proxy_pass http://web:8000;
      proxy_set_header Host nginxproxyserver;
      proxy_set_header X-Real-IP $remote_addr;
@@ -10,13 +10,17 @@ server {
    }
 
    location /health {
-      access_log off;
-      add_header 'Content-Type' 'application/json';
-      return 200 '{"status":"Healthy"}';
+     access_log off;
+     add_header 'Content-Type' 'application/json';
+     return 200 '{"status":"Healthy"}';
    }
 
    location ~ /(media|static)/ {
-        root /www/;
-        expires 30d;
-    }
+     root /www/;
+     expires 30d;
+   }
+
+    location / {
+     deny all;
+   }
 }
